--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,18 @@
 language: python
-env:
-    - TOXENV=py27
-    - TOXENV=py36
-    - TOXENV=py37
-    - TOXENV=flake8
+matrix:
+  include:
+    - python: 2.7
+      env: TOXENV=py27
+    - python: 2.7
+      env: TOXENV=flake8
+
+    - python: 3.6
+      env: TOXENV=py36
+
+    - python: 3.7
+      env: TOXENV=py37
+    - python: 3.7
+      env: TOXENV=flake8
 
 install: "pip install tox"
 
